# computational-intelligence

./: Lab2_set_covering_with_GA (2).ipynb  Lab2_set_covering_with_GA.ipynb  Lab2_set_covering_with_GA_v3.ipynb  README.md  pyproject.toml
Labs/lab_00/: keras_tf.yml  main.py  pyproject.toml
Labs/lab_01/: README.md  main.py
Labs/lab_01/Peer-Review/PietroNoto/Computation-Intelligence-2022-23-main/Lab1/: REVIEW_s303332.md
lab1/: README.md
lab2/: Lab2_set_covering_with_GA_v1.ipynb  Lab2_set_covering_with_GA_vF copy.ipynb  Lab2_set_covering_with_GA_vF.ipynb  New_Test_Lab2_set_covering_with_GA.ipynb  README.md
lab2/Old Versions/: Lab2_set_covering_with_GA_v3.ipynb
lab3/: README.md  RLAgent.py  lab3_nim.ipynb  main.py
