[tool.poetry]
name = "ci-labs-pkg"
version = "0.1.0"
description = "List of Packages used in my labs, during Computational Intelligence course"
authors = ["SamuelePino <samuelepino99@gmail.com>"]
readme = "README.md"
packages = [{include = "ci_labs_pkg"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
